# Create libRocket.

set(Core_HDR_FILES
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorFirstOfType.h
${ROCKET_DIR}/src/Core/DecoratorTiledBoxInstancer.h
${ROCKET_DIR}/src/Core/ElementStyle.h
${ROCKET_DIR}/src/Core/ContextInstancerDefault.h
${ROCKET_DIR}/src/Core/PropertyParserKeyword.h
${ROCKET_DIR}/src/Core/ElementDefinition.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorOnlyChild.h
${ROCKET_DIR}/src/Core/DecoratorNoneInstancer.h
${ROCKET_DIR}/src/Core/DecoratorTiledHorizontal.h
${ROCKET_DIR}/src/Core/DecoratorTiledImageInstancer.h
${ROCKET_DIR}/src/Core/PluginRegistry.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorEmpty.h
${ROCKET_DIR}/src/Core/StyleSheetParser.h
${ROCKET_DIR}/src/Core/XMLNodeHandlerTemplate.h
${ROCKET_DIR}/src/Core/PropertyShorthandDefinition.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthOfType.h
${ROCKET_DIR}/src/Core/ElementTextDefault.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelector.h
${ROCKET_DIR}/src/Core/FontEffectShadowInstancer.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorLastOfType.h
${ROCKET_DIR}/src/Core/TextureLayoutRow.h
${ROCKET_DIR}/src/Core/ElementBackground.h
${ROCKET_DIR}/src/Core/PropertyParserString.h
${ROCKET_DIR}/src/Core/TextureResource.h
${ROCKET_DIR}/src/Core/StyleSheetNode.h
${ROCKET_DIR}/src/Core/Clock.h
${ROCKET_DIR}/src/Core/DecoratorTiledInstancer.h
${ROCKET_DIR}/src/Core/DecoratorTiledImage.h
${ROCKET_DIR}/src/Core/DecoratorTiledVerticalInstancer.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorLastChild.h
${ROCKET_DIR}/src/Core/ElementHandle.h
${ROCKET_DIR}/src/Core/EventDispatcher.h
${ROCKET_DIR}/src/Core/Pool.h
${ROCKET_DIR}/src/Core/TemplateCache.h
${ROCKET_DIR}/src/Core/Template.h
${ROCKET_DIR}/src/Core/UnicodeRange.h
${ROCKET_DIR}/src/Core/EventIterators.h
${ROCKET_DIR}/src/Core/XMLNodeHandlerBody.h
${ROCKET_DIR}/src/Core/LayoutBlockBox.h
${ROCKET_DIR}/src/Core/WidgetSlider.h
${ROCKET_DIR}/src/Core/LayoutInlineBoxText.h
${ROCKET_DIR}/src/Core/FontFaceLayer.h
${ROCKET_DIR}/src/Core/ElementImage.h
${ROCKET_DIR}/src/Core/FontFamily.h
${ROCKET_DIR}/src/Core/DecoratorTiled.h
${ROCKET_DIR}/src/Core/PropertyParserColour.h
${ROCKET_DIR}/src/Core/XMLParseTools.h
${ROCKET_DIR}/src/Core/WidgetSliderScroll.h
${ROCKET_DIR}/src/Core/LayoutBlockBoxSpace.h
${ROCKET_DIR}/src/Core/DocumentHeader.h
${ROCKET_DIR}/src/Core/precompiled.h
${ROCKET_DIR}/src/Core/FontFaceHandle.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthLastChild.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorFirstChild.h
${ROCKET_DIR}/src/Core/LayoutLineBox.h
${ROCKET_DIR}/src/Core/DebugFont.h
${ROCKET_DIR}/src/Core/FontEffectNone.h
${ROCKET_DIR}/src/Core/FontEffectShadow.h
${ROCKET_DIR}/src/Core/TextureDatabase.h
${ROCKET_DIR}/src/Core/PropertyParserNumber.h
${ROCKET_DIR}/src/Core/DecoratorTiledVertical.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthChild.h
${ROCKET_DIR}/src/Core/TextureLayoutRectangle.h
${ROCKET_DIR}/src/Core/LayoutInlineBox.h
${ROCKET_DIR}/src/Core/GeometryDatabase.h
${ROCKET_DIR}/src/Core/FontEffectOutlineInstancer.h
${ROCKET_DIR}/src/Core/TextureLayoutTexture.h
${ROCKET_DIR}/src/Core/FontFace.h
${ROCKET_DIR}/src/Core/TextureLayout.h
${ROCKET_DIR}/src/Core/EventInstancerDefault.h
${ROCKET_DIR}/src/Core/ElementBorder.h
${ROCKET_DIR}/src/Core/XMLNodeHandlerHead.h
${ROCKET_DIR}/src/Core/ElementDecoration.h
${ROCKET_DIR}/src/Core/StreamFile.h
${ROCKET_DIR}/src/Core/LayoutEngine.h
${ROCKET_DIR}/src/Core/FontEffectOutline.h
${ROCKET_DIR}/src/Core/StyleSheetFactory.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthLastOfType.h
${ROCKET_DIR}/src/Core/FileInterfaceDefault.h
${ROCKET_DIR}/src/Core/XMLNodeHandlerDefault.h
${ROCKET_DIR}/src/Core/DecoratorNone.h
${ROCKET_DIR}/src/Core/DecoratorTiledHorizontalInstancer.h
${ROCKET_DIR}/src/Core/StringCache.h
${ROCKET_DIR}/src/Core/FontEffectNoneInstancer.h
${ROCKET_DIR}/src/Core/DecoratorTiledBox.h
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorOnlyOfType.h
)

set(Core_PUB_HDR_FILES
${ROCKET_DIR}/include/Rocket/Core/FontEffect.h
${ROCKET_DIR}/include/Rocket/Core/TypeConverter.h
${ROCKET_DIR}/include/Rocket/Core/ElementScroll.h
${ROCKET_DIR}/include/Rocket/Core/SystemInterface.h
${ROCKET_DIR}/include/Rocket/Core/Colour.h
${ROCKET_DIR}/include/Rocket/Core/Box.h
${ROCKET_DIR}/include/Rocket/Core/ConvolutionFilter.h
${ROCKET_DIR}/include/Rocket/Core/EventListenerInstancer.h
${ROCKET_DIR}/include/Rocket/Core/ElementInstancerGeneric.h
${ROCKET_DIR}/include/Rocket/Core/FileInterface.h
${ROCKET_DIR}/include/Rocket/Core/MathTypes.h
${ROCKET_DIR}/include/Rocket/Core/ElementInstancer.h
${ROCKET_DIR}/include/Rocket/Core/PropertySpecification.h
${ROCKET_DIR}/include/Rocket/Core/Property.h
${ROCKET_DIR}/include/Rocket/Core/Plugin.h
${ROCKET_DIR}/include/Rocket/Core/ElementReference.h
${ROCKET_DIR}/include/Rocket/Core/StreamMemory.h
${ROCKET_DIR}/include/Rocket/Core/WString.h
${ROCKET_DIR}/include/Rocket/Core/EventListener.h
${ROCKET_DIR}/include/Rocket/Core/PropertyDefinition.h
${ROCKET_DIR}/include/Rocket/Core/Decorator.h
${ROCKET_DIR}/include/Rocket/Core/Texture.h
${ROCKET_DIR}/include/Rocket/Core/PropertyDictionary.h
${ROCKET_DIR}/include/Rocket/Core/StyleSheet.h
${ROCKET_DIR}/include/Rocket/Core/FontGlyph.h
${ROCKET_DIR}/include/Rocket/Core/ReferenceCountable.h
${ROCKET_DIR}/include/Rocket/Core/StringUtilities.h
${ROCKET_DIR}/include/Rocket/Core/Vertex.h
${ROCKET_DIR}/include/Rocket/Core/ElementUtilities.h
${ROCKET_DIR}/include/Rocket/Core/Factory.h
${ROCKET_DIR}/include/Rocket/Core/Stream.h
${ROCKET_DIR}/include/Rocket/Core/GeometryUtilities.h
${ROCKET_DIR}/include/Rocket/Core/Vector2.h
${ROCKET_DIR}/include/Rocket/Core/StyleSheetSpecification.h
${ROCKET_DIR}/include/Rocket/Core/RenderInterface.h
${ROCKET_DIR}/include/Rocket/Core/StyleSheetKeywords.h
${ROCKET_DIR}/include/Rocket/Core/Core.h
${ROCKET_DIR}/include/Rocket/Core/FontDatabase.h
${ROCKET_DIR}/include/Rocket/Core/Header.h
${ROCKET_DIR}/include/Rocket/Core/Dictionary.h
${ROCKET_DIR}/include/Rocket/Core/Types.h
${ROCKET_DIR}/include/Rocket/Core/XMLParser.h
${ROCKET_DIR}/include/Rocket/Core/ElementDocument.h
${ROCKET_DIR}/include/Rocket/Core/BaseXMLParser.h
${ROCKET_DIR}/include/Rocket/Core/Debug.h
${ROCKET_DIR}/include/Rocket/Core/URL.h
${ROCKET_DIR}/include/Rocket/Core/Input.h
${ROCKET_DIR}/include/Rocket/Core/Event.h
${ROCKET_DIR}/include/Rocket/Core/Geometry.h
${ROCKET_DIR}/include/Rocket/Core/Font.h
${ROCKET_DIR}/include/Rocket/Core/ElementText.h
${ROCKET_DIR}/include/Rocket/Core/String.h
${ROCKET_DIR}/include/Rocket/Core/Element.h
${ROCKET_DIR}/include/Rocket/Core/ScriptInterface.h
${ROCKET_DIR}/include/Rocket/Core/StringBase.h
${ROCKET_DIR}/include/Rocket/Core/EventInstancer.h
${ROCKET_DIR}/include/Rocket/Core/DecoratorInstancer.h
${ROCKET_DIR}/include/Rocket/Core/Context.h
${ROCKET_DIR}/include/Rocket/Core/FontEffectInstancer.h
${ROCKET_DIR}/include/Rocket/Core/Variant.h
${ROCKET_DIR}/include/Rocket/Core/Math.h
${ROCKET_DIR}/include/Rocket/Core/Log.h
${ROCKET_DIR}/include/Rocket/Core/Platform.h
${ROCKET_DIR}/include/Rocket/Core/XMLNodeHandler.h
${ROCKET_DIR}/include/Rocket/Core/PropertyParser.h
${ROCKET_DIR}/include/Rocket/Core/ContextInstancer.h
${ROCKET_DIR}/include/Rocket/Core.h
)

set(Core_SRC_FILES
${ROCKET_DIR}/src/Core/StreamMemory.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledVertical.cpp
${ROCKET_DIR}/src/Core/EventInstancerDefault.cpp
${ROCKET_DIR}/src/Core/ElementHandle.cpp
${ROCKET_DIR}/src/Core/XMLNodeHandlerBody.cpp
${ROCKET_DIR}/src/Core/TextureDatabase.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledBox.cpp
${ROCKET_DIR}/src/Core/StyleSheetParser.cpp
${ROCKET_DIR}/src/Core/Core.cpp
${ROCKET_DIR}/src/Core/Template.cpp
${ROCKET_DIR}/src/Core/XMLNodeHandler.cpp
${ROCKET_DIR}/src/Core/String.cpp
${ROCKET_DIR}/src/Core/ReferenceCountable.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorLastOfType.cpp
${ROCKET_DIR}/src/Core/ElementBackground.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledHorizontal.cpp
${ROCKET_DIR}/src/Core/EventDispatcher.cpp
${ROCKET_DIR}/src/Core/EventListenerInstancer.cpp
${ROCKET_DIR}/src/Core/StringCache.cpp
${ROCKET_DIR}/src/Core/ElementUtilities.cpp
${ROCKET_DIR}/src/Core/TemplateCache.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledBoxInstancer.cpp
${ROCKET_DIR}/src/Core/Event.cpp
${ROCKET_DIR}/src/Core/Clock.cpp
${ROCKET_DIR}/src/Core/GeometryDatabase.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorOnlyChild.cpp
${ROCKET_DIR}/src/Core/FontEffectInstancer.cpp
${ROCKET_DIR}/src/Core/ElementDecoration.cpp
${ROCKET_DIR}/src/Core/FontEffect.cpp
${ROCKET_DIR}/src/Core/FileInterfaceDefault.cpp
${ROCKET_DIR}/src/Core/XMLNodeHandlerTemplate.cpp
${ROCKET_DIR}/src/Core/ConvolutionFilter.cpp
${ROCKET_DIR}/src/Core/DecoratorTiled.cpp
${ROCKET_DIR}/src/Core/XMLNodeHandlerHead.cpp
${ROCKET_DIR}/src/Core/DocumentHeader.cpp
${ROCKET_DIR}/src/Core/ContextInstancer.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledInstancer.cpp
${ROCKET_DIR}/src/Core/Decorator.cpp
${ROCKET_DIR}/src/Core/BaseXMLParser.cpp
${ROCKET_DIR}/src/Core/Box.cpp
${ROCKET_DIR}/src/Core/PropertyDefinition.cpp
${ROCKET_DIR}/src/Core/Math.cpp
${ROCKET_DIR}/src/Core/ElementText.cpp
${ROCKET_DIR}/src/Core/precompiled.cpp
${ROCKET_DIR}/src/Core/StyleSheetSpecification.cpp
${ROCKET_DIR}/src/Core/FontEffectNone.cpp
${ROCKET_DIR}/src/Core/PluginRegistry.cpp
${ROCKET_DIR}/src/Core/ElementInstancer.cpp
${ROCKET_DIR}/src/Core/RenderInterface.cpp
${ROCKET_DIR}/src/Core/ContextInstancerDefault.cpp
${ROCKET_DIR}/src/Core/LayoutInlineBoxText.cpp
${ROCKET_DIR}/src/Core/TextureLayout.cpp
${ROCKET_DIR}/src/Core/PropertyDictionary.cpp
${ROCKET_DIR}/src/Core/DecoratorInstancer.cpp
${ROCKET_DIR}/src/Core/Context.cpp
${ROCKET_DIR}/src/Core/LayoutEngine.cpp
${ROCKET_DIR}/src/Core/WidgetSlider.cpp
${ROCKET_DIR}/src/Core/Property.cpp
${ROCKET_DIR}/src/Core/ElementStyle.cpp
${ROCKET_DIR}/src/Core/DecoratorNoneInstancer.cpp
${ROCKET_DIR}/src/Core/Element.cpp
${ROCKET_DIR}/src/Core/FontEffectOutlineInstancer.cpp
${ROCKET_DIR}/src/Core/FontDatabase.cpp
${ROCKET_DIR}/src/Core/Texture.cpp
${ROCKET_DIR}/src/Core/ElementScroll.cpp
${ROCKET_DIR}/src/Core/FontFaceLayer.cpp
${ROCKET_DIR}/src/Core/UnicodeRange.cpp
${ROCKET_DIR}/src/Core/FileInterface.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthLastChild.cpp
${ROCKET_DIR}/src/Core/FontEffectShadow.cpp
${ROCKET_DIR}/src/Core/StyleSheetFactory.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorLastChild.cpp
${ROCKET_DIR}/src/Core/LayoutBlockBoxSpace.cpp
${ROCKET_DIR}/src/Core/FontEffectNoneInstancer.cpp
${ROCKET_DIR}/src/Core/FontFace.cpp
${ROCKET_DIR}/src/Core/Vector2.cpp
${ROCKET_DIR}/src/Core/PropertyParserKeyword.cpp
${ROCKET_DIR}/src/Core/StyleSheetNode.cpp
${ROCKET_DIR}/src/Core/ElementDocument.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorEmpty.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledImageInstancer.cpp
${ROCKET_DIR}/src/Core/FontEffectOutline.cpp
${ROCKET_DIR}/src/Core/FontFamily.cpp
${ROCKET_DIR}/src/Core/WString.cpp
${ROCKET_DIR}/src/Core/URL.cpp
${ROCKET_DIR}/src/Core/FontEffectShadowInstancer.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledHorizontalInstancer.cpp
${ROCKET_DIR}/src/Core/DecoratorNone.cpp
${ROCKET_DIR}/src/Core/StreamFile.cpp
${ROCKET_DIR}/src/Core/Dictionary.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledImage.cpp
${ROCKET_DIR}/src/Core/EventInstancer.cpp
${ROCKET_DIR}/src/Core/TextureLayoutRow.cpp
${ROCKET_DIR}/src/Core/PropertySpecification.cpp
${ROCKET_DIR}/src/Core/FontFaceHandle.cpp
${ROCKET_DIR}/src/Core/SystemInterface.cpp
${ROCKET_DIR}/src/Core/ElementBorder.cpp
${ROCKET_DIR}/src/Core/Plugin.cpp
${ROCKET_DIR}/src/Core/LayoutLineBox.cpp
${ROCKET_DIR}/src/Core/TextureLayoutRectangle.cpp
${ROCKET_DIR}/src/Core/TextureResource.cpp
${ROCKET_DIR}/src/Core/LayoutBlockBox.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthOfType.cpp
${ROCKET_DIR}/src/Core/ElementImage.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelector.cpp
${ROCKET_DIR}/src/Core/GeometryUtilities.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthLastOfType.cpp
${ROCKET_DIR}/src/Core/WidgetSliderScroll.cpp
${ROCKET_DIR}/src/Core/XMLParseTools.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorFirstOfType.cpp
${ROCKET_DIR}/src/Core/ElementTextDefault.cpp
${ROCKET_DIR}/src/Core/PropertyParserNumber.cpp
${ROCKET_DIR}/src/Core/XMLNodeHandlerDefault.cpp
${ROCKET_DIR}/src/Core/TextureLayoutTexture.cpp
${ROCKET_DIR}/src/Core/Stream.cpp
${ROCKET_DIR}/src/Core/XMLParser.cpp
${ROCKET_DIR}/src/Core/StyleSheet.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorFirstChild.cpp
${ROCKET_DIR}/src/Core/StringUtilities.cpp
${ROCKET_DIR}/src/Core/Log.cpp
${ROCKET_DIR}/src/Core/Variant.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorNthChild.cpp
${ROCKET_DIR}/src/Core/Geometry.cpp
${ROCKET_DIR}/src/Core/DecoratorTiledVerticalInstancer.cpp
${ROCKET_DIR}/src/Core/ElementReference.cpp
${ROCKET_DIR}/src/Core/StyleSheetNodeSelectorOnlyOfType.cpp
${ROCKET_DIR}/src/Core/PropertyParserString.cpp
${ROCKET_DIR}/src/Core/PropertyParserColour.cpp
${ROCKET_DIR}/src/Core/Factory.cpp
${ROCKET_DIR}/src/Core/ElementDefinition.cpp
${ROCKET_DIR}/src/Core/LayoutInlineBox.cpp
)

set(Controls_HDR_FILES
${ROCKET_DIR}/src/Controls/WidgetDropDown.h
${ROCKET_DIR}/src/Controls/InputTypeRange.h
${ROCKET_DIR}/src/Controls/WidgetSliderInput.h
${ROCKET_DIR}/src/Controls/WidgetTextInputSingleLine.h
${ROCKET_DIR}/src/Controls/WidgetTextInput.h
${ROCKET_DIR}/src/Controls/InputTypeButton.h
${ROCKET_DIR}/src/Controls/WidgetSlider.h
${ROCKET_DIR}/src/Controls/WidgetTextInputMultiLine.h
${ROCKET_DIR}/src/Controls/XMLNodeHandlerTabSet.h
${ROCKET_DIR}/src/Controls/InputTypeCheckbox.h
${ROCKET_DIR}/src/Controls/InputTypeSubmit.h
${ROCKET_DIR}/src/Controls/InputTypeRadio.h
${ROCKET_DIR}/src/Controls/ElementTextSelection.h
${ROCKET_DIR}/src/Controls/InputType.h
${ROCKET_DIR}/src/Controls/XMLNodeHandlerDataGrid.h
${ROCKET_DIR}/src/Controls/XMLNodeHandlerTextArea.h
${ROCKET_DIR}/src/Controls/WidgetTextInputSingleLinePassword.h
${ROCKET_DIR}/src/Controls/InputTypeText.h
)

set(Controls_PUB_HDR_FILES
${ROCKET_DIR}/include/Rocket/Controls/DataQuery.h
${ROCKET_DIR}/include/Rocket/Controls/ElementFormControlDataSelect.h
${ROCKET_DIR}/include/Rocket/Controls/ElementFormControlTextArea.h
${ROCKET_DIR}/include/Rocket/Controls/ElementTabSet.h
${ROCKET_DIR}/include/Rocket/Controls/Controls.h
${ROCKET_DIR}/include/Rocket/Controls/ElementFormControlSelect.h
${ROCKET_DIR}/include/Rocket/Controls/SelectOption.h
${ROCKET_DIR}/include/Rocket/Controls/ElementFormControlInput.h
${ROCKET_DIR}/include/Rocket/Controls/ElementFormControl.h
${ROCKET_DIR}/include/Rocket/Controls/Header.h
${ROCKET_DIR}/include/Rocket/Controls/DataSource.h
${ROCKET_DIR}/include/Rocket/Controls/ElementDataGrid.h
${ROCKET_DIR}/include/Rocket/Controls/ElementDataGridExpandButton.h
${ROCKET_DIR}/include/Rocket/Controls/ElementDataGridRow.h
${ROCKET_DIR}/include/Rocket/Controls/Clipboard.h
${ROCKET_DIR}/include/Rocket/Controls/DataFormatter.h
${ROCKET_DIR}/include/Rocket/Controls/DataSourceListener.h
${ROCKET_DIR}/include/Rocket/Controls/ElementForm.h
${ROCKET_DIR}/include/Rocket/Controls/ElementDataGridCell.h
${ROCKET_DIR}/include/Rocket/Controls.h
)

set(Controls_SRC_FILES
${ROCKET_DIR}/src/Controls/SelectOption.cpp
${ROCKET_DIR}/src/Controls/WidgetTextInputSingleLinePassword.cpp
${ROCKET_DIR}/src/Controls/XMLNodeHandlerDataGrid.cpp
${ROCKET_DIR}/src/Controls/XMLNodeHandlerTextArea.cpp
${ROCKET_DIR}/src/Controls/WidgetDropDown.cpp
${ROCKET_DIR}/src/Controls/ElementTabSet.cpp
${ROCKET_DIR}/src/Controls/ElementFormControlTextArea.cpp
${ROCKET_DIR}/src/Controls/Clipboard.cpp
${ROCKET_DIR}/src/Controls/WidgetTextInputMultiLine.cpp
${ROCKET_DIR}/src/Controls/DataSourceListener.cpp
${ROCKET_DIR}/src/Controls/WidgetSliderInput.cpp
${ROCKET_DIR}/src/Controls/ElementFormControlDataSelect.cpp
${ROCKET_DIR}/src/Controls/InputTypeSubmit.cpp
${ROCKET_DIR}/src/Controls/WidgetTextInput.cpp
${ROCKET_DIR}/src/Controls/Controls.cpp
${ROCKET_DIR}/src/Controls/InputTypeRadio.cpp
${ROCKET_DIR}/src/Controls/ElementDataGridRow.cpp
${ROCKET_DIR}/src/Controls/ElementFormControlSelect.cpp
${ROCKET_DIR}/src/Controls/WidgetSlider.cpp
${ROCKET_DIR}/src/Controls/ElementDataGridExpandButton.cpp
${ROCKET_DIR}/src/Controls/InputTypeText.cpp
${ROCKET_DIR}/src/Controls/InputTypeCheckbox.cpp
${ROCKET_DIR}/src/Controls/InputType.cpp
${ROCKET_DIR}/src/Controls/ElementFormControlInput.cpp
${ROCKET_DIR}/src/Controls/ElementDataGrid.cpp
${ROCKET_DIR}/src/Controls/ElementTextSelection.cpp
${ROCKET_DIR}/src/Controls/XMLNodeHandlerTabSet.cpp
${ROCKET_DIR}/src/Controls/DataQuery.cpp
${ROCKET_DIR}/src/Controls/ElementForm.cpp
${ROCKET_DIR}/src/Controls/InputTypeButton.cpp
${ROCKET_DIR}/src/Controls/InputTypeRange.cpp
${ROCKET_DIR}/src/Controls/ElementDataGridCell.cpp
${ROCKET_DIR}/src/Controls/ElementFormControl.cpp
${ROCKET_DIR}/src/Controls/WidgetTextInputSingleLine.cpp
${ROCKET_DIR}/src/Controls/DataFormatter.cpp
${ROCKET_DIR}/src/Controls/DataSource.cpp
)

set(Debugger_HDR_FILES
${ROCKET_DIR}/src/Debugger/ElementLog.h
${ROCKET_DIR}/src/Debugger/SystemInterface.h
${ROCKET_DIR}/src/Debugger/InfoSource.h
${ROCKET_DIR}/src/Debugger/Plugin.h
${ROCKET_DIR}/src/Debugger/LogSource.h
${ROCKET_DIR}/src/Debugger/ElementInfo.h
${ROCKET_DIR}/src/Debugger/BeaconSource.h
${ROCKET_DIR}/src/Debugger/Geometry.h
${ROCKET_DIR}/src/Debugger/MenuSource.h
${ROCKET_DIR}/src/Debugger/ElementContextHook.h
${ROCKET_DIR}/src/Debugger/CommonSource.h
${ROCKET_DIR}/src/Debugger/FontSource.h
)

set(Debugger_PUB_HDR_FILES
${ROCKET_DIR}/include/Rocket/Debugger/Header.h
${ROCKET_DIR}/include/Rocket/Debugger/Debugger.h
${ROCKET_DIR}/include/Rocket/Debugger.h
)

set(Debugger_SRC_FILES
${ROCKET_DIR}/src/Debugger/ElementInfo.cpp
${ROCKET_DIR}/src/Debugger/Debugger.cpp
${ROCKET_DIR}/src/Debugger/ElementLog.cpp
${ROCKET_DIR}/src/Debugger/ElementContextHook.cpp
${ROCKET_DIR}/src/Debugger/SystemInterface.cpp
${ROCKET_DIR}/src/Debugger/Plugin.cpp
${ROCKET_DIR}/src/Debugger/Geometry.cpp
)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "Release/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "Debug/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "MinSizeRel/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "RelWithDebInfo/${GAMELIB_OUTPUT_DIR}" )


include_directories( ${ROCKET_DIR}/include ${FREETYPE_INCLUDE_DIR_freetype2} )
add_library( ROCKET_LIB STATIC ${Core_HDR_FILES} ${Core_PUB_HDR_FILES} ${Core_SRC_FILES} ${Controls_HDR_FILES} ${Controls_PUB_HDR_FILES} ${Controls_SRC_FILES} )

set_property( TARGET ROCKET_LIB PROPERTY COMPILE_DEFINITIONS STATIC_LIB )
